# discord-search

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: cmd_error.rs  cmd_help.rs  cmd_info.rs  cmd_prefix.rs  cmd_search.rs  globals.rs  lib.rs  main.rs
