[package]
name = "discord-search"
version = "0.1.0"
edition = "2018"

[dependencies]
url = { version = "2.2", default-features = false }
toml = { version = "0.5", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
once_cell = { version = "1.5", default-features = false }
chrono = { version = "0.4", default-features = false }
tokio = { version = "1.1", features = ["rt-multi-thread"] }
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
serenity = { version = "0.10", default-features = false, features = [
    "cache",
    "collector",
    "model",
    "standard_framework",
    "rustls_backend",
] }
