[package]
name = "discord-search"
version = "1.1.2"
edition = "2018"

[dependencies]
url = "2.2"
toml = "0.5"
once_cell = "1.5"
chrono = "0.4"
funty = "=1.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.1"
features = ["rt-multi-thread"]

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "sqlite"]

[dependencies.serenity]
version = "0.10"
features = [
    "cache",
    "collector",
    "model",
    "standard_framework",
    "rustls_backend"
]
